[gd_scene load_steps=3 format=3 uid="uid://dhc7eykvtaegn"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_7u6t6"]
[ext_resource type="Texture2D" uid="uid://bgauxxls5jjwc" path="res://assets/sprites/Cool Text - Dark Quest 460255307421087.png" id="1_7624l"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7u6t6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.184314, 0.211765, 0.380392, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -198.0
offset_right = 331.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7624l")

[node name="Level 1" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = 17.0
offset_right = -119.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 1"

[node name="Level 2" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = 20.0
offset_right = 321.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 2"

[node name="Level 3" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 20.0
offset_right = 328.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Level 3"

[node name="Easy" type="CheckBox" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = 238.0
offset_right = -231.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
text = "Easy"

[node name="Medium" type="CheckBox" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 239.0
offset_right = 45.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
text = "Medium"

[node name="Hard" type="CheckBox" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 232.0
offset_top = 234.0
offset_right = 299.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
text = "Hard"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 172.0
offset_right = 50.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Dificulty"

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -87.0
offset_right = -41.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="CanvasLayer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="CanvasLayer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
